Stop carousel image from overflowing

--- a/src/components/organisms/Carousel/Carousel.pcss
+++ b/src/components/organisms/Carousel/Carousel.pcss
@@ -43,6 +43,10 @@
   touch-action: pan-y;
 }
 
+.embla__image__container {
+  overflow: hidden;
+}
+
 .embla__button {
   z-index: 1;
   display: inline-flex;
